// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header renders Header component correctly 1`] = `
<div>
  <header>
    <div
      class="container"
    >
      <h1
        class="name"
      >
        <a
          href="https://github.com/profile"
        >
          Name Name
        </a>
      </h1>
    </div>
    <div
      class="sub links"
    >
      <div>
        <a
          href="mailto:email@email.email"
        >
          email@email.email
        </a>
      </div>
      <div>
        <a
          href="https://linkedin.com/in/profile"
        >
          linkedin.com/in/profile
        </a>
      </div>
      <div>
        <a
          href="https://github.com/profile"
        >
          github.com/profile
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header renders phone link when phone prop is true 1`] = `
<div>
  <header>
    <div
      class="container"
    >
      <h1
        class="name"
      >
        <a
          href="https://github.com/profile"
        >
          Name Name
        </a>
      </h1>
    </div>
    <div
      class="sub links"
    >
      <div>
        <a
          href="mailto:email@email.email"
        >
          email@email.email
        </a>
      </div>
      <div>
        <a
          href="https://linkedin.com/in/profile"
        >
          linkedin.com/in/profile
        </a>
      </div>
      <div>
        <a
          href="https://github.com/profile"
        >
          github.com/profile
        </a>
      </div>
      <div>
        <a
          href="tel:+17188675309"
        >
          7188675309
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header renders qr code when url is defined 1`] = `
<div>
  <header>
    <div
      class="container"
    >
      <div
        class="qr"
      >
        <parsererror>
          1:15: text data outside of root node.
        </parsererror>
      </div>
      <h1
        class="name"
      >
        <a
          href="https://github.com/profile"
        >
          Name Name
        </a>
      </h1>
    </div>
    <div
      class="sub links"
    >
      <div>
        <a
          href="mailto:email@email.email"
        >
          email@email.email
        </a>
      </div>
      <div>
        <a
          href="https://linkedin.com/in/profile"
        >
          linkedin.com/in/profile
        </a>
      </div>
      <div>
        <a
          href="https://github.com/profile"
        >
          github.com/profile
        </a>
      </div>
    </div>
  </header>
</div>
`;
